Add UserService and AuthenticationService

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Welcome!</h1>
 
+    <p>Click <a th:href="@{/registration}">here</a> to register on the site</p>
     <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 </body>
 </html>
