--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,6 @@
 </head>
 <body>
     <h1>Welcome!</h1>
-
-    <p>Click <a th:href="@{/registration}">here</a> to register on the site</p>
-    <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+    <p><a th:href="@{/auth/signup}">Sign up</a> or <a th:href="@{/auth/signin}">Sign in</a></p>
 </body>
 </html>
