--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,12 +8,23 @@
 </head>
 <body class="text-center">
     <div class="container">
-        <h1 class="mt-5">Welcome!</h1>
-        <p class="mt-3">
-            <a th:href="@{/auth/signup}" class="btn btn-primary">Sign up</a>
-            or
-            <a th:href="@{/auth/signin}" class="btn btn-secondary">Sign in</a>
-        </p>
+        <div class="row justify-content-center mt-5">
+            <h1 class="mt-3">
+                <a href="https://github.com/edzvonik/cloud-file-storage">cloud-file-storage</a>
+            </h1>
+
+            <p class="col-md-5 mt-3">
+                Многопользовательское файловое облако.
+                Пользователи сервиса могут использовать его для загрузки и хранения файлов.
+                Источником вдохновения для проекта является Google Drive.
+            </p>
+
+            <p class="mt-2">
+                <a th:href="@{/auth/signin}" class="btn btn-primary">Sign In</a>
+                or
+                <a th:href="@{/auth/signup}" class="btn btn-secondary">Sign Up</a>
+            </p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
