--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="card">
                     <div class="card-body">
                         <h3 class="card-title text-center">Sign In</h3>
@@ -31,7 +31,17 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+<!--                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>-->
+<!--                            or-->
+<!--                            <a th:href="@{/auth/signup}" class="btn btn-secondary">Sign Up</a>-->
+
+<!--                            <a th:href="@{/home}" class="btn btn-secondary ml-auto">Back</a>-->
+                            <div class="d-flex">
+                                <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                                <div class="align-self-center mx-2"> or </div>
+                                <a th:href="@{/auth/signup}" class="btn btn-secondary">Sign Up</a>
+                                <a th:href="@{/home}" class="btn btn-secondary ms-auto">Back</a>
+                            </div>
                         </form>
                     </div>
                 </div>
