--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="card">
                     <div class="card-body">
                         <h3 class="card-title text-center">Sign Up</h3>
@@ -28,7 +28,12 @@
                                 <input type="password" class="form-control" id="password" name="password"
                                        placeholder="Enter your password">
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <div class="d-flex">
+                                <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                                <div class="align-self-center mx-2"> or </div>
+                                <a th:href="@{/auth/signin}" class="btn btn-secondary">Sign In</a>
+                                <a th:href="@{/home}" class="btn btn-secondary ms-auto">Back</a>
+                            </div>
                         </form>
                     </div>
                 </div>
