--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -14,7 +14,7 @@
         }
     </style>
 </head>
-<body class="text-center">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Your Logo</a>
@@ -45,9 +45,35 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
-        <h1 th:inline="text">Hello, <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>
+    <div class="row">
+        <!-- Sidebar -->
+        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+            <div class="position-sticky">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="btn btn-primary btn-block" href="#">
+                            Upload
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-secondary btn-block mt-2" href="#">
+                            Create
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <div class="text-center">
+                <h1 th:inline="text">Hello, <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>
+            </div>
+        </main>
     </div>
+
+<!--    <div class="container mt-5">-->
+<!--        <h1 th:inline="text">Hello, <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>-->
+<!--    </div>-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
